# QLeverToWebAssembly

./: Dockerfile  HouseIndex.index.ops  HouseIndex.index.patterns  HouseIndex.index.sop  HouseIndex.vocabulary.words.external  IRI-resolution.internal.index.pos  IRI-resolution.meta-data.json  IRI-resolution.vocabulary.words.external.offsets  IRI-resolution.vocabulary.words.internal  Olympics.index.osp  Olympics.index.patterns  Olympics.vocabulary.codebooks  README.md  TBBT.index.osp  TBBT.index.patterns  TBBT.index.pso  TBBT.internal.index.pos  TBBT.meta-data.json  TBBT.vocabulary.words.external  TBBT.vocabulary.words.internal.ids  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
assets/: index-BUbGzBtw.js  index-BnMIH7Z3.js
modified_qlever_files/: CMakeLists.txt  Qlever.cpp  dummy.cpp
public/: HouseIndex.index.osp  HouseIndex.index.spo  HouseIndex.internal.index.pos  HouseIndex.internal.index.pso  HouseIndex.vocabulary.words.internal  HouseIndex.vocabulary.words.internal.ids  IRI-resolution.index.osp  IRI-resolution.index.pso  IRI-resolution.internal.index.pso  IRI-resolution.vocabulary.codebooks  Olympics.index.ops  Olympics.index.pso  Olympics.index.spo  Olympics.internal.index.pso  Olympics.meta-data.json  Olympics.vocabulary.words.internal  Olympics.vocabulary.words.internal.ids  TBBT.index.ops  TBBT.index.sop  TBBT.vocabulary.codebooks  TBBT.vocabulary.words.internal  headers  multithreadoutput10.js  multithreadoutput6.js  multithreadoutput7.js  multithreadoutput8.js  multithreadoutput9.js
src/: button.ts  counter.ts  main.ts  (+10 more)
(+5 files in other folders)
